# mnes

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  conanfile.txt
.github/workflows/: ci.yml  codeql-analysis.yml  template-janitor.yml
builds/msvc/: mnes.sln
builds/msvc/mnes/: mnes.vcxproj  mnes.vcxproj.filters
cmake/: MnesCmakeUtilities.cmake  MnesProjectSettings.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
contrib/freeglut-2.8.0/VisualStudio/2012/: freeglut.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/CallbackMaker/: CallbackMaker.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/Fractals/: Fractals.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/Fractals_random/: Fractals_random.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/Lorenz/: Lorenz.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/One/: One.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/Resizer/: Resizer.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/shapes/: shapes.vcxproj
contrib/freeglut-2.8.0/VisualStudio/2012/smooth_opengl3/: smooth_opengl3.vcxproj
contrib/include/: minput.h  minput.hpp  msound.h  vrfauto.h
contrib/lib/: freeglut.exp  freeglut.ilk  freeglut.lib  libminput.exp  libminput.iobj  libminput.ipdb  libminput.lib  libminputd.lib  msound.lib  msound32.lib  msound32d.lib
docs/: MAPPERS.NFO  Nintendo Entertainment System Architecture.htm  apu_discussion.txt  mmc2.txt  mmc3.txt  mmc4.txt  mnes.txt  nametables.txt  nesinfo.txt  opcodes.txt
docs/NES101/: NES101.html  p65  tutor.p65  tutorchr.p65  tutorprg.p65
src/: BytePtrVector.h  CMakeLists.txt  FileLoader.cpp  FileLoader.h  Log.cpp  addressing_modes.cpp  alu.cpp  aorom.cpp  apu.cpp  apu.h  background.cpp  branches.cpp  cnrom.cpp  compare.cpp  control_flags.cpp  control_flags.h  cpu.cpp  cpu.h  cpu_opcodes.cpp  cpu_opcodes.h  cpu_registers.cpp  cpu_registers.h  file.hpp  flag.cpp  gfx.cpp  gfx.h  global.cpp  global.h  illegal.cpp  imm_addressing.cpp  imp_addressing.cpp  imp_opcodes.cpp  incdec.cpp  ines_format.h  joystick.cpp  jump.cpp  jump_addressing.cpp  loadstore.cpp  log.h  main.cpp  (+41 more)
src/GfxEngine/: CMakeLists.txt  KeyType.cpp  KeyType.h  PixelType.cpp  PixelType.h  PlatformType.cpp  PlatformType.h  Timediff.cpp  Timediff.h
src/GfxEngine/Core/: Application.h  CMakeLists.txt  LayerT.cpp  LayerT.h
src/GfxEngine/Platform/: CMakeLists.txt
src/GfxEngine/Platform/OpenGL330/: CMakeLists.txt  GLFWPlatform.cpp  OpenGLImGui.cpp  OpenGLImGui.h  OpenGLPlatform.cpp  OpenGLPlatform.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLWindow.cpp  OpenGLWindow.h  OpenGLWindowData.cpp  OpenGLWindowData.h
src/common/: BytePtrVector.h  CMakeLists.txt  Cyclediff.cpp  Cyclediff.h  File.h  FileLoader.cpp  FileLoader.h  Log.cpp  Log.h  control_flags.cpp  control_flags.h  global.cpp  global.h  ines_format.h
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  cpu_opcodes.cpp  cpu_opcodes.h  cpu_registers.cpp  cpu_registers.h  imm_addressing.cpp  imp_addressing.cpp  imp_opcodes.cpp  joystick.cpp  jump_addressing.cpp  memory.cpp  memory.h  memory_registers.cpp  memory_registers.h  r_addressing.cpp  r_opcodes.cpp  rel_addressing.cpp  rel_opcodes.cpp  rwm_addressing.cpp  rwm_opcodes.cpp  stack_opcodes.cpp  w_addressing.cpp  w_opcodes.cpp
src/gfx/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.h  MainLayer.cpp  MainLayer.h  Renderer.cpp  Renderer.h  application.cpp  application.h  data.cpp  data.h  fragment.cpp  gfx.cpp  gfx.h  input.cpp  input.h  platform.cpp  platform.h  vertex.cpp
src/mappers/: CMakeLists.txt  aorom.cpp  aorom.h  cnrom.cpp  cnrom.h  mapper.cpp  mapper.h  mmc1.cpp  mmc1.h  mmc2.cpp  mmc2.h  mmc3.cpp  mmc3.h  mmc4.cpp  mmc4.h  mmc5.cpp  mmc5.h  nrom.cpp  nrom.h  unrom.cpp  unrom.h
src/ppu/: CMakeLists.txt  background.cpp  ppu.cpp  ppu.h  ppu_memory.cpp  ppu_memory.h  ppu_registers.cpp  ppu_registers.h  ppuaddr.cpp  sprite.cpp
src/sound/: CMakeLists.txt  apu.cpp  apu.h  sound.cpp
test/: CMakeLists.txt  fceux.cfg
test/nesemu2/: nesemu2.cfg
test/sav/: Legend of Zelda, The (PRG 0) (U).sav
(+1 files in other folders)
